# QQBotAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  config.yml  docker-compose.yml  docker-entrypoint.sh  getStartNapcat.txt  getStartNonebot.txt  napcat.sh  next_step.md  pyproject.toml  setup.sh  start.sh  start_bot.sh  stop.sh  test.sh  test_env.py  vllm-start.sh
QQBot/: DOCUMENTATION.md  PLAN.md  README.md  config.yml  pyproject.toml  requirements.txt  test_agent.py
QQBot/agent/: agent.py  context.py  continuous_session.py  hardware.py  memory.py  permissions.py  profile.py  session.py  special_session.py  tool_registry.py  workspace.py
QQBot/agent/config/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SESSION.md  SOUL.md  TOOLS.md  USER.md  WORKSPACE.md
QQBot/config/: gacha_data.json  models_settings_example.json
QQBot/docs/: bug-report-special-session-workspace.md  security-boundary-remaining.md
QQBot/lib/: amap_client.py  deepseek_client.py  model_router.py  multimodal_client.py
QQBot/plugins/: agent_router.py  chat.py  deepseek_chat.py  deepseek_context.py  deepseek_tools.py  group.py  photos.py  pullingMonitor.py  speed.py  test.py  utils.py
QQBot/tools/: builtin_tools.py  file_tools.py  legacy_tools.py  map_tools.py
QQBotAgent/: README.md  pyproject.toml
docs/: next_step_for_deepscientist.md
searxng/: limiter.toml  settings.yml
